--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 			if(e.key=="d") player.tryMove(1, 0);
 
 			if(e.key>=1 && e.key<=9) player.castSpell(e.key-1);
+
+			if((e.key==" ") || (e.key=="Spacebar")) player.cycle()
 		}
 	};
 	
