--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	}
 </style>
 
-<canvas></canvas>
+<canvas id="gameCanvas"></canvas>
 <script src="js/game.js"></script>
 <script src="js/map.js"></script>
 <script src="js/tile.js"></script>
@@ -61,5 +61,29 @@
 	
 	setupCanvas();
 
-	initSounds();
+  initSounds();
+  
+var gameCanvas = document.getElementById("gameCanvas");
+
+function mouseTracker(){
+  const e = window.event
+  const mouseX = e.clientX
+  const mouseY = e.clientY
+
+  const canvasX = gameCanvas.offsetLeft
+  const canvasY = gameCanvas.offsetTop
+  const gameAreaWidth = gameCanvas.offsetWidth * 0.68
+  const menuLeft = canvasX + gameAreaWidth
+
+  if(mouseX > menuLeft){
+    hoverMenu = true
+  }  else {
+    hoverMenu = false
+  }        
+}
+
+gameCanvas.addEventListener('mousemove', () => mouseTracker(), true)
+
+
+  
 </script>
