feat(exchange) Add exchange life feature
[x] add player.exchange()
[ ] add visual information to the new feature

Fix #17

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	gameState = "loading";
 
-	startingHp = 5;
+	startingHp = 2;
 	numLevels = 6;
 
 	shakeAmount = 0;
@@ -49,7 +49,9 @@
 			if(e.key=="w") player.tryMove(0, -1);
 			if(e.key=="s") player.tryMove(0, 1);
 			if(e.key=="a") player.tryMove(-1, 0);
-			if(e.key=="d") player.tryMove(1, 0);
+      if(e.key=="d") player.tryMove(1, 0);
+      if(e.key=="t") player.exchange();
+      
 
 			if(e.key>=1 && e.key<=9) player.castSpell(e.key-1);
 
